--- a/02_imgproc/17_houghCircle/CMakeLists.txt
+++ b/02_imgproc/17_houghCircle/CMakeLists.txt
@@ -5,8 +5,8 @@ find_package(OpenCV REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(a ./houghlines.cpp)
-add_executable(b ./HoughLines_Demo.cpp)
+add_executable(a ./houghcircles.cpp)
+add_executable(b ./HoughCircle_Demo.cpp)
 
 target_link_libraries(a ${OpenCV_LIBS})
 target_link_libraries(b ${OpenCV_LIBS})
