--- a/02_imgproc/28_generalContour/CMakeLists.txt
+++ b/02_imgproc/28_generalContour/CMakeLists.txt
@@ -5,8 +5,8 @@ find_package(OpenCV REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-#add_executable(a ./generalContours_demo1.cpp)
-add_executable(b ./generalContours_demo1mod.cpp)
+add_executable(a ./generalContours_demo1_local.cpp)
+#add_executable(b ./generalContours_demo1mod.cpp)
 
-#target_link_libraries(a ${OpenCV_LIBS})
-target_link_libraries(b ${OpenCV_LIBS})
+target_link_libraries(a ${OpenCV_LIBS})
+#target_link_libraries(b ${OpenCV_LIBS})
